y.output
Terminals unused in grammar

   QUOTE
   DQUOTE
   FOR
   NEXT
   REPEAT
   UNTIL


Estado 59 conflitos: 4 de deslocamento/redução
Estado 60 conflitos: 4 de deslocamento/redução
Estado 61 conflitos: 4 de deslocamento/redução
Estado 62 conflitos: 4 de deslocamento/redução
Estado 68 conflitos: 2 de deslocamento/redução
Estado 92 conflitos: 2 de deslocamento/redução
Estado 93 conflitos: 2 de deslocamento/redução


Gramática

    0 $accept: code $end

    1 code: declaracoes acoes
    2     | acoes

    3 declaracoes: declaracao ';'
    4            | declaracoes declaracao ';'

    5 declaracao: listadeclaracao ':' tipo

    6 listadeclaracao: IDF
    7                | IDF ',' listadeclaracao

    8 tipo: tipounico
    9     | tipolista

   10 tipounico: INT
   11          | DOUBLE
   12          | REAL
   13          | CHAR

   14 tipolista: INT '[' listadupla ']'
   15          | DOUBLE '[' listadupla ']'
   16          | REAL '[' listadupla ']'
   17          | CHAR '[' listadupla ']'

   18 listadupla: INT_LIT ':' INT_LIT
   19           | INT_LIT ':' INT_LIT ',' listadupla

   20 acoes: comando ';'
   21      | comando ';' acoes

   22 comando: lvalue '=' expr
   23        | enunciado

   24 lvalue: IDF
   25       | IDF '[' listaexpr ']'

   26 listaexpr: expr
   27          | expr ',' listaexpr

   28 expr: expr '+' expr
   29     | expr '-' expr
   30     | expr '*' expr
   31     | expr '/' expr
   32     | '(' expr ')'
   33     | INT_LIT
   34     | F_LIT
   35     | lvalue
   36     | chamaproc

   37 chamaproc: IDF '(' listaexpr ')'

   38 enunciado: expr
   39          | IF '(' expbool ')' THEN acoes fiminstcontrole
   40          | WHILE '(' expbool ')' '{' acoes '}'

   41 fiminstcontrole: END
   42                | ELSE acoes END

   43 expbool: TRUE
   44        | FALSE
   45        | '(' expbool ')'
   46        | expbool AND expbool
   47        | expbool OR expbool
   48        | NOT expbool
   49        | expr '>' expr
   50        | expr '<' expr
   51        | expr LE expr
   52        | expr GE expr
   53        | expr EQ expr
   54        | expr NE expr


Terminais, com as regras onde eles aparecem

$end (0) 0
'(' (40) 32 37 39 40 45
')' (41) 32 37 39 40 45
'*' (42) 30
'+' (43) 28
',' (44) 7 19 27
'-' (45) 29
'/' (47) 31
':' (58) 5 18 19
';' (59) 3 4 20 21
'<' (60) 50
'=' (61) 22
'>' (62) 49
'[' (91) 14 15 16 17 25
']' (93) 14 15 16 17 25
'{' (123) 40
'}' (125) 40
error (256)
IDF (258) 6 7 24 25 37
INT (259) 10 14
DOUBLE (260) 11 15
REAL (261) 12 16
CHAR (262) 13 17
QUOTE (263)
DQUOTE (264)
LE (265) 51
GE (266) 52
EQ (267) 53
NE (268) 54
AND (269) 46
OR (270) 47
NOT (271) 48
IF (272) 39
THEN (273) 39
ELSE (274) 42
WHILE (275) 40
INT_LIT (276) 18 19 33
F_LIT (277) 34
END (278) 41 42
TRUE (279) 43
FALSE (280) 44
FOR (281)
NEXT (282)
REPEAT (283)
UNTIL (284)


Não-terminais com as regras onde eles aparecem

$accept (46)
    à esquerda: 0
code (47)
    à esquerda: 1 2, à direita: 0
declaracoes (48)
    à esquerda: 3 4, à direita: 1 4
declaracao (49)
    à esquerda: 5, à direita: 3 4
listadeclaracao (50)
    à esquerda: 6 7, à direita: 5 7
tipo (51)
    à esquerda: 8 9, à direita: 5
tipounico (52)
    à esquerda: 10 11 12 13, à direita: 8
tipolista (53)
    à esquerda: 14 15 16 17, à direita: 9
listadupla (54)
    à esquerda: 18 19, à direita: 14 15 16 17 19
acoes (55)
    à esquerda: 20 21, à direita: 1 2 21 39 40 42
comando (56)
    à esquerda: 22 23, à direita: 20 21
lvalue (57)
    à esquerda: 24 25, à direita: 22 35
listaexpr (58)
    à esquerda: 26 27, à direita: 25 27 37
expr (59)
    à esquerda: 28 29 30 31 32 33 34 35 36, à direita: 22 26 27 28
    29 30 31 32 38 49 50 51 52 53 54
chamaproc (60)
    à esquerda: 37, à direita: 36
enunciado (61)
    à esquerda: 38 39 40, à direita: 23
fiminstcontrole (62)
    à esquerda: 41 42, à direita: 39
expbool (63)
    à esquerda: 43 44 45 46 47 48 49 50 51 52 53 54, à direita: 39
    40 45 46 47 48


estado 0

    0 $accept: . code $end

    '('      deslocar, e ir ao estado 1
    IDF      deslocar, e ir ao estado 2
    IF       deslocar, e ir ao estado 3
    WHILE    deslocar, e ir ao estado 4
    INT_LIT  deslocar, e ir ao estado 5
    F_LIT    deslocar, e ir ao estado 6

    code             ir ao estado 7
    declaracoes      ir ao estado 8
    declaracao       ir ao estado 9
    listadeclaracao  ir ao estado 10
    acoes            ir ao estado 11
    comando          ir ao estado 12
    lvalue           ir ao estado 13
    expr             ir ao estado 14
    chamaproc        ir ao estado 15
    enunciado        ir ao estado 16


estado 1

   32 expr: '(' . expr ')'

    '('      deslocar, e ir ao estado 1
    IDF      deslocar, e ir ao estado 17
    INT_LIT  deslocar, e ir ao estado 5
    F_LIT    deslocar, e ir ao estado 6

    lvalue     ir ao estado 18
    expr       ir ao estado 19
    chamaproc  ir ao estado 15


estado 2

    6 listadeclaracao: IDF .
    7                | IDF . ',' listadeclaracao
   24 lvalue: IDF .
   25       | IDF . '[' listaexpr ']'
   37 chamaproc: IDF . '(' listaexpr ')'

    ','  deslocar, e ir ao estado 20
    '['  deslocar, e ir ao estado 21
    '('  deslocar, e ir ao estado 22

    ':'       reduzir usando a regra 6 (listadeclaracao)
    $padrão  reduzir usando a regra 24 (lvalue)


estado 3

   39 enunciado: IF . '(' expbool ')' THEN acoes fiminstcontrole

    '('  deslocar, e ir ao estado 23


estado 4

   40 enunciado: WHILE . '(' expbool ')' '{' acoes '}'

    '('  deslocar, e ir ao estado 24


estado 5

   33 expr: INT_LIT .

    $padrão  reduzir usando a regra 33 (expr)


estado 6

   34 expr: F_LIT .

    $padrão  reduzir usando a regra 34 (expr)


estado 7

    0 $accept: code . $end

    $end  deslocar, e ir ao estado 25


estado 8

    1 code: declaracoes . acoes
    4 declaracoes: declaracoes . declaracao ';'

    '('      deslocar, e ir ao estado 1
    IDF      deslocar, e ir ao estado 2
    IF       deslocar, e ir ao estado 3
    WHILE    deslocar, e ir ao estado 4
    INT_LIT  deslocar, e ir ao estado 5
    F_LIT    deslocar, e ir ao estado 6

    declaracao       ir ao estado 26
    listadeclaracao  ir ao estado 10
    acoes            ir ao estado 27
    comando          ir ao estado 12
    lvalue           ir ao estado 13
    expr             ir ao estado 14
    chamaproc        ir ao estado 15
    enunciado        ir ao estado 16


estado 9

    3 declaracoes: declaracao . ';'

    ';'  deslocar, e ir ao estado 28


estado 10

    5 declaracao: listadeclaracao . ':' tipo

    ':'  deslocar, e ir ao estado 29


estado 11

    2 code: acoes .

    $padrão  reduzir usando a regra 2 (code)


estado 12

   20 acoes: comando . ';'
   21      | comando . ';' acoes

    ';'  deslocar, e ir ao estado 30


estado 13

   22 comando: lvalue . '=' expr
   35 expr: lvalue .

    '='  deslocar, e ir ao estado 31

    $padrão  reduzir usando a regra 35 (expr)


estado 14

   28 expr: expr . '+' expr
   29     | expr . '-' expr
   30     | expr . '*' expr
   31     | expr . '/' expr
   38 enunciado: expr .

    '*'  deslocar, e ir ao estado 32
    '/'  deslocar, e ir ao estado 33
    '+'  deslocar, e ir ao estado 34
    '-'  deslocar, e ir ao estado 35

    $padrão  reduzir usando a regra 38 (enunciado)


estado 15

   36 expr: chamaproc .

    $padrão  reduzir usando a regra 36 (expr)


estado 16

   23 comando: enunciado .

    $padrão  reduzir usando a regra 23 (comando)


estado 17

   24 lvalue: IDF .
   25       | IDF . '[' listaexpr ']'
   37 chamaproc: IDF . '(' listaexpr ')'

    '['  deslocar, e ir ao estado 21
    '('  deslocar, e ir ao estado 22

    $padrão  reduzir usando a regra 24 (lvalue)


estado 18

   35 expr: lvalue .

    $padrão  reduzir usando a regra 35 (expr)


estado 19

   28 expr: expr . '+' expr
   29     | expr . '-' expr
   30     | expr . '*' expr
   31     | expr . '/' expr
   32     | '(' expr . ')'

    ')'  deslocar, e ir ao estado 36
    '*'  deslocar, e ir ao estado 32
    '/'  deslocar, e ir ao estado 33
    '+'  deslocar, e ir ao estado 34
    '-'  deslocar, e ir ao estado 35


estado 20

    7 listadeclaracao: IDF ',' . listadeclaracao

    IDF  deslocar, e ir ao estado 37

    listadeclaracao  ir ao estado 38


estado 21

   25 lvalue: IDF '[' . listaexpr ']'

    '('      deslocar, e ir ao estado 1
    IDF      deslocar, e ir ao estado 17
    INT_LIT  deslocar, e ir ao estado 5
    F_LIT    deslocar, e ir ao estado 6

    lvalue     ir ao estado 18
    listaexpr  ir ao estado 39
    expr       ir ao estado 40
    chamaproc  ir ao estado 15


estado 22

   37 chamaproc: IDF '(' . listaexpr ')'

    '('      deslocar, e ir ao estado 1
    IDF      deslocar, e ir ao estado 17
    INT_LIT  deslocar, e ir ao estado 5
    F_LIT    deslocar, e ir ao estado 6

    lvalue     ir ao estado 18
    listaexpr  ir ao estado 41
    expr       ir ao estado 40
    chamaproc  ir ao estado 15


estado 23

   39 enunciado: IF '(' . expbool ')' THEN acoes fiminstcontrole

    '('      deslocar, e ir ao estado 42
    IDF      deslocar, e ir ao estado 17
    NOT      deslocar, e ir ao estado 43
    INT_LIT  deslocar, e ir ao estado 5
    F_LIT    deslocar, e ir ao estado 6
    TRUE     deslocar, e ir ao estado 44
    FALSE    deslocar, e ir ao estado 45

    lvalue     ir ao estado 18
    expr       ir ao estado 46
    chamaproc  ir ao estado 15
    expbool    ir ao estado 47


estado 24

   40 enunciado: WHILE '(' . expbool ')' '{' acoes '}'

    '('      deslocar, e ir ao estado 42
    IDF      deslocar, e ir ao estado 17
    NOT      deslocar, e ir ao estado 43
    INT_LIT  deslocar, e ir ao estado 5
    F_LIT    deslocar, e ir ao estado 6
    TRUE     deslocar, e ir ao estado 44
    FALSE    deslocar, e ir ao estado 45

    lvalue     ir ao estado 18
    expr       ir ao estado 46
    chamaproc  ir ao estado 15
    expbool    ir ao estado 48


estado 25

    0 $accept: code $end .

    $padrão  aceitar


estado 26

    4 declaracoes: declaracoes declaracao . ';'

    ';'  deslocar, e ir ao estado 49


estado 27

    1 code: declaracoes acoes .

    $padrão  reduzir usando a regra 1 (code)


estado 28

    3 declaracoes: declaracao ';' .

    $padrão  reduzir usando a regra 3 (declaracoes)


estado 29

    5 declaracao: listadeclaracao ':' . tipo

    INT     deslocar, e ir ao estado 50
    DOUBLE  deslocar, e ir ao estado 51
    REAL    deslocar, e ir ao estado 52
    CHAR    deslocar, e ir ao estado 53

    tipo       ir ao estado 54
    tipounico  ir ao estado 55
    tipolista  ir ao estado 56


estado 30

   20 acoes: comando ';' .
   21      | comando ';' . acoes

    '('      deslocar, e ir ao estado 1
    IDF      deslocar, e ir ao estado 17
    IF       deslocar, e ir ao estado 3
    WHILE    deslocar, e ir ao estado 4
    INT_LIT  deslocar, e ir ao estado 5
    F_LIT    deslocar, e ir ao estado 6

    $padrão  reduzir usando a regra 20 (acoes)

    acoes      ir ao estado 57
    comando    ir ao estado 12
    lvalue     ir ao estado 13
    expr       ir ao estado 14
    chamaproc  ir ao estado 15
    enunciado  ir ao estado 16


estado 31

   22 comando: lvalue '=' . expr

    '('      deslocar, e ir ao estado 1
    IDF      deslocar, e ir ao estado 17
    INT_LIT  deslocar, e ir ao estado 5
    F_LIT    deslocar, e ir ao estado 6

    lvalue     ir ao estado 18
    expr       ir ao estado 58
    chamaproc  ir ao estado 15


estado 32

   30 expr: expr '*' . expr

    '('      deslocar, e ir ao estado 1
    IDF      deslocar, e ir ao estado 17
    INT_LIT  deslocar, e ir ao estado 5
    F_LIT    deslocar, e ir ao estado 6

    lvalue     ir ao estado 18
    expr       ir ao estado 59
    chamaproc  ir ao estado 15


estado 33

   31 expr: expr '/' . expr

    '('      deslocar, e ir ao estado 1
    IDF      deslocar, e ir ao estado 17
    INT_LIT  deslocar, e ir ao estado 5
    F_LIT    deslocar, e ir ao estado 6

    lvalue     ir ao estado 18
    expr       ir ao estado 60
    chamaproc  ir ao estado 15


estado 34

   28 expr: expr '+' . expr

    '('      deslocar, e ir ao estado 1
    IDF      deslocar, e ir ao estado 17
    INT_LIT  deslocar, e ir ao estado 5
    F_LIT    deslocar, e ir ao estado 6

    lvalue     ir ao estado 18
    expr       ir ao estado 61
    chamaproc  ir ao estado 15


estado 35

   29 expr: expr '-' . expr

    '('      deslocar, e ir ao estado 1
    IDF      deslocar, e ir ao estado 17
    INT_LIT  deslocar, e ir ao estado 5
    F_LIT    deslocar, e ir ao estado 6

    lvalue     ir ao estado 18
    expr       ir ao estado 62
    chamaproc  ir ao estado 15


estado 36

   32 expr: '(' expr ')' .

    $padrão  reduzir usando a regra 32 (expr)


estado 37

    6 listadeclaracao: IDF .
    7                | IDF . ',' listadeclaracao

    ','  deslocar, e ir ao estado 20

    $padrão  reduzir usando a regra 6 (listadeclaracao)


estado 38

    7 listadeclaracao: IDF ',' listadeclaracao .

    $padrão  reduzir usando a regra 7 (listadeclaracao)


estado 39

   25 lvalue: IDF '[' listaexpr . ']'

    ']'  deslocar, e ir ao estado 63


estado 40

   26 listaexpr: expr .
   27          | expr . ',' listaexpr
   28 expr: expr . '+' expr
   29     | expr . '-' expr
   30     | expr . '*' expr
   31     | expr . '/' expr
